--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "binance-api-node": "^0.12.6",
     "technicalindicators": "^3.1.0",
     "tulind": "^0.8.20"
