--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "binance-api-node": "^0.12.6",
+    "node-cron": "^3.0.2",
     "technicalindicators": "^3.1.0",
     "tulind": "^0.8.20"
   }
